Visible play/ stop labels

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    opacity: 0.01;
+    opacity: 0.5;
 }
 
 
@@ -45,7 +45,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    opacity: 0.01;
+    opacity: 0.5;
 }
     
 #welcome{
@@ -66,20 +66,24 @@
 {
     border: none;
     background-color: transparent; /*Make the background of the button dissappear*/
-    color: transparent; /*Make text of button dissappear*/
+    color: lightgreen; /*Make text of button dissappear*/
     /*Cover the whole div*/
     width: 100%; 
     height: 100%;
+    transform: rotate(-90deg);
+    font-size: 100px;
 }
 
 #audioS
 {
     border: none;
     background-color: transparent; /*Make the background of the button dissappear*/
-    color: transparent; /*Make text of button dissappear*/
+    color: red; /*Make text of button dissappear*/
     /*Cover the whole div*/
     width: 100%; 
     height: 100%;
+    transform: rotate(-90deg);
+    font-size: 100px;
 }
 
 
